# quartz

./: .gitignore  AGENTS.md  quartz.config.ts
irrev/: ARTIFACT_TAXONOMY.md  HARNESS_AUDIT.md  JUNCTIONS_PLAN.md  LEDGER_ENRICHMENT_DESIGN.md  LEDGER_ENRICHMENT_IMPLEMENTATION.md  MCP_NEO4J_READONLY.md  NEO4J_READONLY_MCP_PLAN.md  PHASE3_CONSTRAINT_INTEGRATION.md  PHASE4_EXECUTION_LOGGING.md  PHASE5_QUERY_API_COMPLETE.md  PHASE6_CLI_INTERFACE.md  PHASE6_COMPLETE.md  README.md  SELF_AUDIT_FINDINGS.md  STREAMS.md  d3_graph_viewer.html  pyproject.toml
irrev/irrev/: __init__.py  audit_log.py  cli.py  events.py  models.py  planning.py  watcher.py
irrev/irrev/analysis/: __init__.py  semantic_signals.py
irrev/irrev/artifact/: __init__.py  compat.py  content_store.py  events.py  ledger.py  plan_manager.py  risk.py  snapshot.py  util.py  validation_rules.py  vault_types.py
irrev/irrev/commands/: artifact_cmd.py  artifact_types_cmd.py  audit.py  graph_cmd.py  hubs.py  junctions.py  (+6 more)
irrev/tests/: __init__.py  conftest.py  test_artifact_cli.py  test_artifact_system.py  test_artifact_type_system.py  test_broken_link_allows_assets.py  test_constraints_integration.py  test_constraints_ruleset.py  test_execution_logging.py  test_graph_communities.py  test_graph_dot.py  test_graph_html_panzoom.py  test_harness.py  test_hub_required_headings.py  test_hubs.py  test_junctions_concept_audit.py  test_junctions_domain_audit.py  test_kind_violation.py  test_ledger_queries.py  test_lint_rules.py  test_mcp_neo4j_validator.py  test_mechanism_missing_residuals.py  test_registry_generation.py
(+244 files in other folders)
